--- a/index.html
+++ b/index.html
@@ -1,93 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projeto Holyrics</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projeto HoLyrics</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-100 text-gray-800">
-  <header class="bg-orange-600 text-white py-4 shadow-md sticky top-0 z-50">
-    <div class="container mx-auto flex justify-between items-center px-6">
-      <h1 class="text-2xl font-bold">Projeto Holyrics</h1>
-      <nav class="space-x-6 hidden md:block">
-        <a href="#home" class="hover:text-orange-200">Início</a>
-        <a href="#sobre" class="hover:text-orange-200">Sobre</a>
-        <a href="#aulas" class="hover:text-orange-200">Aulas</a>
-        <a href="#contato" class="hover:text-orange-200">Contato</a>
-        <button id="btnCompartilhar" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition">Compartilhar 🔗</button>
-      </nav>
-    </div>
-  </header>
+<body>
+    <!-- Banner de topo -->
+    <header class="banner">
+        <div class="banner-content">
+            <img src="logo-holyrics.png" alt="Logo Projeto HoLyrics" class="logo">
+            <h1>Projeto HoLyrics</h1>
+            <p>Aprenda a criar letras e projeções com estilo único</p>
+            <a href="https://www.youtube.com/@projetoholyrics7226" target="_blank" class="btn">Visite nosso canal</a>
+        </div>
+    </header>
 
-  <section id="home" class="min-h-screen flex flex-col justify-center items-center text-center bg-gradient-to-b from-orange-100 to-white px-6">
-    <h2 class="text-4xl md:text-5xl font-bold text-orange-700 mb-4">Aprenda Holyrics de forma prática 🎶</h2>
-    <p class="text-lg md:text-xl max-w-2xl mb-6">O <strong>Projeto Holyrics</strong> é dedicado a ajudar ministérios e igrejas a utilizarem o programa Holyrics com excelência. Aqui você encontra tutoriais e dicas para tornar suas apresentações mais criativas e profissionais.</p>
-    <a href="#aulas" class="bg-orange-500 text-white px-6 py-3 rounded-xl hover:bg-orange-600 transition">Assistir Aulas</a>
-  </section>
+    <main>
+        <!-- Sobre o Canal -->
+        <section class="card">
+            <h2>O que é o Projeto HoLyrics?</h2>
+            <p>
+                O Projeto HoLyrics é um canal dedicado a ensinar você a usar o programa HoLyrics, criando letras, temas animados e projeções para cultos ou eventos. 
+                Nosso objetivo é ajudar ministérios e pessoas a produzirem conteúdos visuais de alta qualidade.
+            </p>
+            <p>
+                Atualmente o canal conta com cerca de <strong>6,8 mil inscritos</strong> e mais de <strong>170 vídeos</strong> publicados.
+            </p>
+        </section>
 
-  <section id="sobre" class="py-20 bg-white px-6 text-center">
-    <h2 class="text-3xl font-semibold text-orange-700 mb-6">Sobre o Projeto</h2>
-    <p class="max-w-3xl mx-auto text-lg text-gray-700 leading-relaxed">O <strong>Projeto Holyrics</strong> foi criado para capacitar equipes de mídia e louvor a usarem o Holyrics de forma criativa. Nosso foco é tornar o aprendizado acessível e prático, para que cada igreja possa adorar com mais qualidade e beleza visual.</p>
-  </section>
+        <!-- Origem do Canal -->
+        <section class="card">
+            <h2>Como o canal surgiu?</h2>
+            <p>
+                O canal surgiu da paixão por música, letras e edição de projeções, com a proposta de ajudar outros a criarem seus conteúdos visuais usando o HoLyrics. Cada vídeo é feito com cuidado para inspirar e ensinar.
+            </p>
+            <img src="sua-foto.jpg" alt="Foto do Criador do Canal" class="foto">
+        </section>
 
-  <section id="aulas" class="py-20 bg-orange-50 px-6 text-center">
-    <h2 class="text-3xl font-semibold text-orange-700 mb-10">Tutoriais e Dicas</h2>
-    <div class="grid md:grid-cols-3 gap-8">
-      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition">
-        <img src="https://img.youtube.com/vi/OV-IKDfAahk/maxresdefault.jpg" alt="Banner Como colocar o celular no Holyrics" class="rounded-lg mb-4">
-        <iframe class="w-full aspect-video rounded-lg mb-4" src="https://www.youtube.com/embed/OV-IKDfAahk" title="Como colocar o celular no Holyrics" allowfullscreen></iframe>
-        <h3 class="text-xl font-semibold text-orange-700 mb-2">Como colocar o celular no Holyrics</h3>
-        <p class="text-gray-600">Aprenda passo a passo como conectar o celular ao Holyrics de forma correta.</p>
-      </div>
-      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition">
-        <img src="https://img.youtube.com/vi/TF_fu0qa_Gk/maxresdefault.jpg" alt="Banner Como projetar do jeito certo" class="rounded-lg mb-4">
-        <iframe class="w-full aspect-video rounded-lg mb-4" src="https://www.youtube.com/embed/TF_fu0qa_Gk" title="Como projetar do jeito certo" allowfullscreen></iframe>
-        <h3 class="text-xl font-semibold text-orange-700 mb-2">Como projetar do jeito certo</h3>
-        <p class="text-gray-600">Veja como configurar corretamente a projeção no Holyrics e evitar erros comuns.</p>
-      </div>
-      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition">
-        <img src="https://img.youtube.com/vi/7wp5ZMGK_ec/maxresdefault.jpg" alt="Banner 157 Temas Animados" class="rounded-lg mb-4">
-        <iframe class="w-full aspect-video rounded-lg mb-4" src="https://www.youtube.com/embed/7wp5ZMGK_ec" title="157 Temas Animados" allowfullscreen></iframe>
-        <h3 class="text-xl font-semibold text-orange-700 mb-2">157 Temas Animados</h3>
-        <p class="text-gray-600">Conheça uma coleção de 157 temas animados para usar em suas projeções Holyrics.</p>
-      </div>
-    </div>
+        <!-- Vídeo em destaque -->
+        <section class="card">
+            <h2>Vídeo em destaque</h2>
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/QZ-M3Ghjp8M" title="Tutorial HoLyrics – Programa (parte 1/4)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <p>Confira esse tutorial que mostra como começar a usar o HoLyrics. <a href="https://www.youtube.com/watch?v=QZ-M3Ghjp8M" target="_blank">Assistir no YouTube</a></p>
+        </section>
+    </main>
 
-    <div class="mt-12">
-      <a href="https://www.youtube.com/@projetoholyrics7226" target="_blank" class="inline-block bg-orange-500 text-white px-8 py-3 rounded-xl hover:bg-orange-600 transition text-lg font-semibold">🎥 Visite o Canal no YouTube</a>
-    </div>
-  </section>
-
-  <section id="contato" class="py-20 bg-white px-6 text-center">
-    <h2 class="text-3xl font-semibold text-orange-700 mb-6">Fale Conosco</h2>
-    <p class="text-gray-700 mb-6">Quer sugerir temas, tirar dúvidas ou colaborar com o projeto? Entre em contato pelas redes abaixo:</p>
-    <div class="flex justify-center space-x-6">
-      <a href="https://www.youtube.com/@projetoholyrics7226" target="_blank" class="text-orange-700 hover:text-orange-900">YouTube</a>
-      <a href="#" class="text-orange-700 hover:text-orange-900">Instagram</a>
-      <a href="#" class="text-orange-700 hover:text-orange-900">E-mail</a>
-    </div>
-  </section>
-
-  <footer class="bg-orange-600 text-white text-center py-4">
-    <p>© 2025 Projeto Holyrics - Desenvolvido por Davi Samuel</p>
-  </footer>
-
-  <script>
-    document.getElementById('btnCompartilhar').addEventListener('click', async () => {
-      const url = window.location.href;
-      const title = document.title;
-      if (navigator.share) {
-        try {
-          await navigator.share({ title, url });
-        } catch (error) {
-          console.error('Erro ao compartilhar:', error);
-        }
-      } else {
-        navigator.clipboard.writeText(url);
-        alert('✅ Link do site copiado! Agora você pode compartilhar com seus amigos.');
-      }
-    });
-  </script>
+    <!-- Rodapé -->
+    <footer>
+        <p>&copy; 2025 Projeto HoLyrics. Todos os direitos reservados.</p>
+        <p>Visite nosso canal: <a href="https://www.youtube.com/@projetoholyrics7226" target="_blank">Projeto HoLyrics</a></p>
+    </footer>
 </body>
 </html>
