--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Banner de topo -->
+    <!-- Banner com foto de perfil -->
     <header class="banner">
         <div class="banner-content">
-            <img src="logo-holyrics.png" alt="Logo Projeto HoLyrics" class="logo">
+            <img src="foto-perfil.jpg" alt="Foto de perfil do Projeto HoLyrics" class="perfil">
             <h1>Projeto HoLyrics</h1>
             <p>Aprenda a criar letras e projeções com estilo único</p>
             <a href="https://www.youtube.com/@projetoholyrics7226" target="_blank" class="btn">Visite nosso canal</a>
