--- a/index.html
+++ b/index.html
@@ -99,16 +99,19 @@
   </section>
 
   <!-- Download -->
-  <section id="download" class="py-20 bg-orange-50 px-6 text-center">
-    <h2 class="text-3xl font-semibold text-orange-700 mb-6">Downloads</h2>
-    <p class="text-gray-700 mb-6 max-w-3xl mx-auto">
-      Aqui você pode baixar materiais relacionados ao Holyrics, tutoriais, apresentações e recursos que facilitam seu aprendizado.
-    </p>
-    <div class="flex flex-col md:flex-row justify-center gap-6">
-      <a href="link_para_arquivo_1.zip" class="bg-orange-500 text-white px-6 py-3 rounded-xl hover:bg-orange-600 transition">Baixar Tutorial 1</a>
-      <a href="link_para_arquivo_2.zip" class="bg-orange-500 text-white px-6 py-3 rounded-xl hover:bg-orange-600 transition">Baixar Recursos</a>
-    </div>
-  </section>
+<section id="download" class="py-20 bg-orange-50 px-6 text-center">
+  <h2 class="text-3xl font-semibold text-orange-700 mb-6">Downloads</h2>
+  <p class="text-gray-700 mb-6 max-w-3xl mx-auto">
+    Aqui você pode baixar materiais relacionados ao Holyrics, tutoriais, apresentações e recursos que facilitam seu aprendizado.
+  </p>
+  <div class="flex flex-col md:flex-row justify-center gap-6">
+    <a href="https://www.mediafire.com/file/92atexr9ifjkltd/Holyrics.exe/file" target="_blank" 
+       class="bg-orange-500 text-white px-6 py-3 rounded-xl hover:bg-orange-600 transition">
+      Baixar Holyrics
+    </a>
+  </div>
+</section>
+
 
   <!-- Contato -->
   <section id="contato" class="py-20 bg-white px-6 text-center">
