--- a/index.html
+++ b/index.html
@@ -17,15 +17,34 @@
         <h1 class="text-2xl font-bold">Projeto Holyrics</h1>
       </div>
 
-      <!-- Navegação -->
+      <!-- Navegação desktop -->
       <nav class="space-x-6 hidden md:flex items-center">
         <a href="#home" class="hover:text-orange-200">Início</a>
         <a href="#sobre" class="hover:text-orange-200">Sobre</a>
         <a href="#aulas" class="hover:text-orange-200">Aulas</a>
         <a href="#download" class="hover:text-orange-200">Download</a>
-        <a href="#contato" class="hover:text-orange-200">Contato</a>
         <button id="btnCompartilhar" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition">Compartilhar 🔗</button>
       </nav>
+
+      <!-- Botão hambúrguer mobile -->
+      <div class="md:hidden flex items-center">
+        <button id="menu-btn" class="focus:outline-none">
+          <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+               xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <!-- Menu mobile (escondido inicialmente) -->
+    <div id="mobile-menu" class="hidden md:hidden bg-orange-500 px-6 pt-4 pb-6 space-y-3">
+      <a href="#home" class="block text-white font-semibold hover:text-orange-200">Início</a>
+      <a href="#sobre" class="block text-white font-semibold hover:text-orange-200">Sobre</a>
+      <a href="#aulas" class="block text-white font-semibold hover:text-orange-200">Aulas</a>
+      <a href="#download" class="block text-white font-semibold hover:text-orange-200">Download</a>
+      <button id="btnCompartilharMobile" class="w-full bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition">Compartilhar 🔗</button>
     </div>
   </header>
 
@@ -128,8 +147,33 @@
     <p>© 2025 Projeto Holyrics - Desenvolvido por Davi Samuel</p>
   </footer>
 
-  <!-- Script Compartilhar -->
+  <!-- Script Compartilhar e Menu Mobile -->
   <script>
+    const menuBtn = document.getElementById('menu-btn');
+    const mobileMenu = document.getElementById('mobile-menu');
+    const btnCompartilharMobile = document.getElementById('btnCompartilharMobile');
+
+    menuBtn.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
+    });
+
+    // Compartilhar Mobile
+    btnCompartilharMobile.addEventListener('click', async () => {
+      const url = window.location.href;
+      const title = document.title;
+      if (navigator.share) {
+        try {
+          await navigator.share({ title, url });
+        } catch (error) {
+          console.error('Erro ao compartilhar:', error);
+        }
+      } else {
+        navigator.clipboard.writeText(url);
+        alert('✅ Link do site copiado! Agora você pode compartilhar com seus amigos.');
+      }
+    });
+
+    // Compartilhar Desktop
     document.getElementById('btnCompartilhar').addEventListener('click', async () => {
       const url = window.location.href;
       const title = document.title;
