--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <!-- Menu mobile (escondido inicialmente) -->
+    <!-- Menu mobile -->
     <div id="mobile-menu" class="hidden md:hidden bg-orange-500 px-6 pt-4 pb-6 space-y-3">
       <a href="#home" class="block text-white font-semibold hover:text-orange-200">Início</a>
       <a href="#sobre" class="block text-white font-semibold hover:text-orange-200">Sobre</a>
@@ -124,7 +124,7 @@
       Aqui você pode baixar materiais relacionados ao Holyrics, tutoriais, apresentações e recursos que facilitam seu aprendizado.
     </p>
     <div class="flex flex-col md:flex-row justify-center gap-6">
-      <a href="https://www.mediafire.com/file/92atexr9ifjkltd/Holyrics.exe/file" target="_blank" 
+      <a href="https://www.mediafire.com/file/hftvpnpcxwtlza7/Holyrics-setup-2.24.0-64.exe/file" target="_blank" 
          class="bg-orange-500 text-white px-6 py-3 rounded-xl hover:bg-orange-600 transition">
         Baixar Holyrics
       </a>
