--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <header class="bg-orange-600 text-white py-4 shadow-md sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center px-6">
       <div class="flex items-center space-x-4">
-        <!-- Foto do canal -->
-        <img src="https://img.youtube.com/vi/OV-IKDfAahk/maxresdefault.jpg" alt="Foto do Canal" class="w-12 h-12 rounded-full border-2 border-white">
+        <!-- Nova Foto do canal -->
+        <img src="https://raw.githubusercontent.com/nadatemeres-code/site-do-projeto-holyrics-/ffd4101836b41fbd15daf390dd6c41f2310fb178/Imagem%20do%20WhatsApp%20de%202025-08-27%20%C3%A0(s)%2012.10.02_a28fbfa3.jpg" 
+             alt="Foto do Canal" class="w-12 h-12 rounded-full border-2 border-white">
         <h1 class="text-2xl font-bold">Projeto Holyrics</h1>
       </div>
 
@@ -23,6 +24,7 @@
         <a href="#sobre" class="hover:text-orange-200">Sobre</a>
         <a href="#aulas" class="hover:text-orange-200">Aulas</a>
         <a href="#download" class="hover:text-orange-200">Download</a>
+        <a href="#videos" class="hover:text-orange-200">Vídeos Recentes</a>
         <button id="btnCompartilhar" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition">Compartilhar 🔗</button>
       </nav>
 
@@ -44,6 +46,7 @@
       <a href="#sobre" class="block text-white font-semibold hover:text-orange-200">Sobre</a>
       <a href="#aulas" class="block text-white font-semibold hover:text-orange-200">Aulas</a>
       <a href="#download" class="block text-white font-semibold hover:text-orange-200">Download</a>
+      <a href="#videos" class="block text-white font-semibold hover:text-orange-200">Vídeos Recentes</a>
       <button id="btnCompartilharMobile" class="w-full bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition">Compartilhar 🔗</button>
     </div>
   </header>
@@ -131,6 +134,45 @@
     </div>
   </section>
 
+  <!-- Vídeos Recentes -->
+  <section id="videos" class="py-20 bg-white px-6 text-center">
+    <h2 class="text-3xl font-semibold text-orange-700 mb-10">Vídeos Recentes</h2>
+    <div class="grid md:grid-cols-3 gap-8">
+      
+      <!-- Video 1 -->
+      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition">
+        <a href="https://youtu.be/n2mn7XnrSt4" target="_blank">
+          <img src="https://img.youtube.com/vi/n2mn7XnrSt4/maxresdefault.jpg" alt="COMO COLOCAR UMA CÂMERA NO TELÃO COM LOUVORES ? USANDO O HOLRYCS ." class="w-full rounded-lg mb-4">
+        </a>
+        <iframe class="w-full aspect-video rounded-lg mb-4" src="https://www.youtube.com/embed/n2mn7XnrSt4" title="COMO COLOCAR UMA CÂMERA NO TELÃO COM LOUVORES ? USANDO O HOLRYCS ." allowfullscreen></iframe>
+        <h3 class="text-xl font-semibold text-orange-700 mb-2">COMO COLOCAR UMA CÂMERA NO TELÃO COM LOUVORES ? USANDO O HOLRYCS .</h3>
+      </div>
+
+      <!-- Video 2 -->
+      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition">
+        <a href="https://youtu.be/_qQ4qaPw_0Y" target="_blank">
+          <img src="https://img.youtube.com/vi/_qQ4qaPw_0Y/maxresdefault.jpg" alt="COMO INSTALAR O HOLYRICS NO COMPUTADOR E CONFIGURAR." class="w-full rounded-lg mb-4">
+        </a>
+        <iframe class="w-full aspect-video rounded-lg mb-4" src="https://www.youtube.com/embed/_qQ4qaPw_0Y" title="COMO INSTALAR O HOLYRICS NO COMPUTADOR E CONFIGURAR." allowfullscreen></iframe>
+        <h3 class="text-xl font-semibold text-orange-700 mb-2">COMO INSTALAR O HOLYRICS NO COMPUTADOR E CONFIGURAR.</h3>
+      </div>
+
+      <!-- Video 3 -->
+      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition">
+        <a href="https://youtu.be/v7UWiTkWpEc" target="_blank">
+          <img src="https://img.youtube.com/vi/v7UWiTkWpEc/maxresdefault.jpg" alt="COMO INSTALAR FONTES NO HOLYRICS ?" class="w-full rounded-lg mb-4">
+        </a>
+        <iframe class="w-full aspect-video rounded-lg mb-4" src="https://www.youtube.com/embed/v7UWiTkWpEc" title="COMO INSTALAR FONTES NO HOLYRICS ?" allowfullscreen></iframe>
+        <h3 class="text-xl font-semibold text-orange-700 mb-2">COMO INSTALAR FONTES NO HOLYRICS ?</h3>
+      </div>
+
+    </div>
+
+    <div class="mt-12">
+      <a href="https://www.youtube.com/@projetoholyrics7226" target="_blank" class="inline-block bg-orange-500 text-white px-8 py-3 rounded-xl hover:bg-orange-600 transition text-lg font-semibold">🎥 Ver todos os vídeos no YouTube</a>
+    </div>
+  </section>
+
   <!-- Contato -->
   <section id="contato" class="py-20 bg-white px-6 text-center">
     <h2 class="text-3xl font-semibold text-orange-700 mb-6">Fale Conosco</h2>
@@ -147,33 +189,8 @@
     <p>© 2025 Projeto Holyrics - Desenvolvido por Davi Samuel</p>
   </footer>
 
-  <!-- Script Compartilhar e Menu Mobile -->
   <script>
-    const menuBtn = document.getElementById('menu-btn');
-    const mobileMenu = document.getElementById('mobile-menu');
-    const btnCompartilharMobile = document.getElementById('btnCompartilharMobile');
-
-    menuBtn.addEventListener('click', () => {
-      mobileMenu.classList.toggle('hidden');
-    });
-
-    // Compartilhar Mobile
-    btnCompartilharMobile.addEventListener('click', async () => {
-      const url = window.location.href;
-      const title = document.title;
-      if (navigator.share) {
-        try {
-          await navigator.share({ title, url });
-        } catch (error) {
-          console.error('Erro ao compartilhar:', error);
-        }
-      } else {
-        navigator.clipboard.writeText(url);
-        alert('✅ Link do site copiado! Agora você pode compartilhar com seus amigos.');
-      }
-    });
-
-    // Compartilhar Desktop
+    // Compartilhar
     document.getElementById('btnCompartilhar').addEventListener('click', async () => {
       const url = window.location.href;
       const title = document.title;
@@ -187,6 +204,28 @@
         navigator.clipboard.writeText(url);
         alert('✅ Link do site copiado! Agora você pode compartilhar com seus amigos.');
       }
+    });
+
+    document.getElementById('btnCompartilharMobile').addEventListener('click', async () => {
+      const url = window.location.href;
+      const title = document.title;
+      if (navigator.share) {
+        try {
+          await navigator.share({ title, url });
+        } catch (error) {
+          console.error('Erro ao compartilhar:', error);
+        }
+      } else {
+        navigator.clipboard.writeText(url);
+        alert('✅ Link do site copiado! Agora você pode compartilhar com seus amigos.');
+      }
+    });
+
+    // Menu Mobile
+    const menuBtn = document.getElementById('menu-btn');
+    const mobileMenu = document.getElementById('mobile-menu');
+    menuBtn.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
     });
   </script>
 
