--- a/index.html
+++ b/index.html
@@ -156,15 +156,39 @@
   </section>
 
   <!-- Contato -->
-  <section id="contato" class="py-20 bg-white px-6 text-center">
-    <h2 class="text-3xl font-semibold text-orange-700 mb-6">Fale Conosco</h2>
-    <p class="text-gray-700 mb-6">Quer sugerir temas, tirar dúvidas ou colaborar com o projeto? Entre em contato pelas redes abaixo:</p>
-    <div class="flex justify-center space-x-6">
-      <a href="https://www.youtube.com/@projetoholyrics7226" target="_blank" class="text-orange-700 hover:text-orange-900">YouTube</a>
-      <a href="#" class="text-orange-700 hover:text-orange-900">Instagram</a>
-      <a href="#" class="text-orange-700 hover:text-orange-900">E-mail</a>
-    </div>
-  </section>
+<section id="contato" class="py-20 bg-white px-6 text-center">
+  <h2 class="text-3xl font-semibold text-orange-700 mb-6">Fale Conosco</h2>
+  <p class="text-gray-700 mb-6">Quer sugerir temas, tirar dúvidas ou colaborar com o projeto? Entre em contato pelas redes abaixo:</p>
+  
+  <div class="flex justify-center space-x-8">
+    <!-- YouTube -->
+    <a href="https://www.youtube.com/@projetoholyrics7226" target="_blank" class="flex items-center space-x-2 text-orange-700 hover:text-orange-900">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M19.615 3.184c-.225-.845-.887-1.506-1.732-1.732C16.014 1.2 12 1.2 12 1.2s-4.014 0-5.883.252c-.845.225-1.506.887-1.732 1.732C4.2 5.053 4.2 8.4 4.2 8.4s0 3.347.185 5.216c.225.845.887 1.506 1.732 1.732C7.986 15.6 12 15.6 12 15.6s4.014 0 5.883-.252c.845-.225 1.506-.887 1.732-1.732.185-1.869.185-5.216.185-5.216s0-3.347-.185-5.216zM9.6 11.4V5.4l5.4 3-5.4 3z"/>
+      </svg>
+      <span class="font-semibold">YouTube</span>
+    </a>
+
+    <!-- WhatsApp -->
+    <a href="https://chat.whatsapp.com/C3RhvCOREhHIfZOlPRQTKu" target="_blank" class="flex items-center space-x-2 text-green-600 hover:text-green-700">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.031-.967-.273-.099-.471-.149-.669.15-.198.297-.767.966-.94 1.164-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.654-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.447-.52.149-.173.198-.298.297-.497.099-.198.05-.372-.025-.52-.075-.149-.669-1.611-.916-2.203-.242-.579-.487-.5-.669-.51-.173-.009-.372-.01-.57-.01s-.52.075-.793.372c-.273.297-1.04 1.016-1.04 2.479s1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.262.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.29.173-1.414-.074-.124-.272-.198-.57-.347z"/>
+        <path fill="none" d="M0 0h24v24H0z"/>
+      </svg>
+      <span class="font-semibold">WhatsApp</span>
+    </a>
+
+    <!-- Instagram -->
+    <a href="https://www.instagram.com/holyrics_projeto/" target="_blank" class="flex items-center space-x-2 text-pink-500 hover:text-pink-700">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.17.056 1.97.24 2.432.402a4.919 4.919 0 011.675 1.093 4.918 4.918 0 011.093 1.675c.162.462.346 1.262.402 2.432.058 1.266.07 1.645.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.97-.402 2.432a4.918 4.918 0 01-1.093 1.675 4.919 4.919 0 01-1.675 1.093c-.462.162-1.262.346-2.432.402-1.266.058-1.645.07-4.85.07s-3.584-.012-4.85-.07c-1.17-.056-1.97-.24-2.432-.402a4.918 4.918 0 01-1.675-1.093 4.918 4.918 0 01-1.093-1.675c-.162-.462-.346-1.262-.402-2.432C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.056-1.17.24-1.97.402-2.432a4.918 4.918 0 011.093-1.675 4.918 4.918 0 011.675-1.093c.462-.162 1.262-.346 2.432-.402C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.013 7.052.072 5.771.131 4.76.308 4.042.556a7.1 7.1 0 00-2.558 1.447A7.103 7.103 0 00.036 4.558c-.247.718-.425 1.73-.484 3.012C-.013 8.332 0 8.741 0 12c0 3.259.013 3.668.072 4.948.059 1.282.237 2.294.484 3.012a7.103 7.103 0 001.448 2.558 7.103 7.103 0 002.558 1.448c.718.247 1.73.425 3.012.484C8.332 23.987 8.741 24 12 24s3.668-.013 4.948-.072c1.282-.059 2.294-.237 3.012-.484a7.103 7.103 0 002.558-1.448 7.103 7.103 0 001.448-2.558c.247-.718.425-1.73.484-3.012C23.987 15.668 24 15.259 24 12s-.013-3.668-.072-4.948c-.059-1.282-.237-2.294-.484-3.012a7.103 7.103 0 00-1.448-2.558 7.103 7.103 0 00-2.558-1.448c-.718-.247-1.73-.425-3.012-.484C15.668.013 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.999 3.999 0 110-7.998 3.999 3.999 0 010 7.998zm6.406-11.845a1.44 1.44 0 11-2.881 0 1.44 1.44 0 012.881 0z"/>
+      </svg>
+      <span class="font-semibold">Instagram</span>
+    </a>
+  </div>
+</section>
+
+
 
   <!-- Footer -->
   <footer class="bg-orange-600 text-white text-center py-4">
