--- a/index.html
+++ b/index.html
@@ -163,7 +163,135 @@
   </a>
   </div>
   </section>
-  
+  <!-- Artigos -->
+<section id="artigos" class="py-20 bg-white px-6 text-center">
+  <h2 class="text-3xl font-semibold text-orange-700 mb-10">📝 Artigos</h2>
+
+  <div class="max-w-4xl mx-auto bg-orange-50 p-6 rounded-2xl shadow">
+
+   <!-- Artigo Completo: Equipamentos para uma Boa Projeção -->
+<section id="artigos" class="py-20 bg-white px-6 text-center">
+  <h2 class="text-3xl font-semibold text-orange-700 mb-8">📝 Artigo — Equipamentos essenciais para uma boa projeção</h2>
+
+  <div class="max-w-4xl mx-auto text-left space-y-6">
+
+    <p class="text-gray-700">
+      A projeção de imagens em cultos e eventos exige equipamentos adequados para garantir brilho, nitidez e
+      confiabilidade. Abaixo explicamos os equipamentos essenciais, suas funções, especificações técnicas relevantes
+      e um passo-a-passo resumido de montagem.
+    </p>
+
+    <!-- GALERIA DE IMAGENS INLINE -->
+    <div class="grid md:grid-cols-3 gap-6">
+
+      <div class="text-center">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Barco_projector.jpg"
+             class="w-full h-40 object-cover rounded-xl shadow mb-2">
+        <p class="text-sm text-gray-500">Exemplo de Projetor</p>
+      </div>
+
+      <div class="text-center">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/40/LED_Projector_machine.jpg"
+             class="w-full h-40 object-cover rounded-xl shadow mb-2">
+        <p class="text-sm text-gray-500">Projetor LED</p>
+      </div>
+
+      <div class="text-center">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/40/Projection-screen-home.jpg"
+             class="w-full h-40 object-cover rounded-xl shadow mb-2">
+        <p class="text-sm text-gray-500">Tela de Projeção</p>
+      </div>
+
+    </div>
+
+    <!-- SEÇÃO: Projetor -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">1. Projetor (essencial)</h3>
+    <p class="text-gray-700">
+      Função: gera a imagem projetada na tela. É o equipamento principal para garantir boa visualização de letras,
+      vídeos e fundos animados.
+    </p>
+
+    <p class="text-gray-700">Especificações importantes:</p>
+    <ul class="list-disc pl-6 text-gray-700">
+      <li><strong>Lumens (ANSI)</strong> — quanto mais alto, mais forte o brilho. Para igrejas:
+        <br>• 2.500–4.000 lumens para ambientes controlados  
+        <br>• 4.000+ lumens para ambientes claros
+      </li>
+      <li><strong>Resolução</strong> — FHD (1080p) já traz excelente nitidez para letras; 4K é ideal para telas grandes.</li>
+      <li><strong>Tipo de luz</strong> — Laser: vida útil maior e manutenção menor. / Lamp: custo menor, mas exige troca.</li>
+      <li><strong>Conexões</strong> — HDMI é obrigatório; VGA só se o equipamento for antigo.</li>
+      <li><strong>Throw Ratio</strong> — define a distância necessária do projetor até a tela.</li>
+    </ul>
+
+    <!-- SEÇÃO: Notebook / PC -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">2. Notebook / PC (Fonte de sinal)</h3>
+    <p class="text-gray-700">
+      Função: roda o Holyrics ou outro software de projeção. Precisa ser confiável e rápido.
+    </p>
+
+    <ul class="list-disc pl-6 text-gray-700">
+      <li><strong>Processador:</strong> i5 / Ryzen 5 para cima.</li>
+      <li><strong>RAM:</strong> 8 GB (mínimo) — 16 GB recomendado.</li>
+      <li><strong>Armazenamento:</strong> SSD para carregar mais rápido os slides e vídeos.</li>
+      <li><strong>Saídas de vídeo:</strong> HDMI é o ideal; tenha adaptadores USB-C → HDMI.</li>
+    </ul>
+
+    <!-- SEÇÃO: Cabos e Adaptadores -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">3. Cabos e adaptadores</h3>
+    <p class="text-gray-700">
+      Função: garantir que o sinal chegue sem falhas ao projetor.
+    </p>
+    <ul class="list-disc pl-6 text-gray-700">
+      <li><strong>HDMI:</strong> cabo básico até 10 m funciona bem; acima disso, prefira HDMI ativo ou fibra.</li>
+      <li><strong>Adaptadores:</strong> leve reservas — USB-C → HDMI, Mini DisplayPort → HDMI e VGA → HDMI.</li>
+    </ul>
+
+    <!-- SEÇÃO: Tela -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">4. Tela de projeção</h3>
+    <p class="text-gray-700">
+      Função: refletir a imagem de forma limpa e sem distorções.
+    </p>
+
+    <ul class="list-disc pl-6 text-gray-700">
+      <li><strong>Tela retrátil:</strong> prática e fácil de transportar.</li>
+      <li><strong>Tela fixa:</strong> oferece contraste melhor.</li>
+      <li><strong>Parede branca:</strong> solução econômica, desde que esteja bem pintada.</li>
+    </ul>
+
+    <!-- SEÇÃO: Som -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">5. Sistema de som</h3>
+    <p class="text-gray-700">
+      Função: reproduzir áudio de vídeos e fundos musicais vindos do computador.
+    </p>
+    <ul class="list-disc pl-6 text-gray-700">
+      <li><strong>Caixas amplificadas</strong> ou conexão com a mesa de som.</li>
+      <li><strong>Cabos P2, P10 ou XLR</strong> dependendo da mesa.</li>
+      <li>Evite usar áudio via Bluetooth — tem atraso.</li>
+    </ul>
+
+    <!-- PASSO A PASSO -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">Passo a passo resumido para montar a projeção</h3>
+
+    <ol class="list-decimal pl-6 text-gray-700">
+      <li>Posicione o projetor na distância ideal da tela.</li>
+      <li>Ligue o computador ao projetor via HDMI.</li>
+      <li>Ajuste foco, brilho e keystone no projetor.</li>
+      <li>Conecte o áudio à mesa de som (se usar vídeos).</li>
+      <li>Teste slides, vídeos e animações antes do culto.</li>
+      <li>Tenha sempre cabos reservas e adaptadores extras.</li>
+    </ol>
+
+    <!-- CONCLUSÃO -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">Conclusão</h3>
+    <p class="text-gray-700">
+      A projeção pode ser algo extremamente simples ou muito profissional, dependendo do investimento.
+      Entretanto, com um bom projetor, um notebook confiável, cabos adequados e uma tela de qualidade,
+      você já consegue entregar uma projeção bonita, estável e visualmente agradável.
+    </p>
+
+  </div>
+</section>
+
   <!-- Download -->
   <section id="download" class="py-20 bg-white px-6 text-center">
     <h2 class="text-3xl font-semibold text-orange-700 mb-6">Download do Holyrics</h2>
