--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a href="#apresentacao" class="hover:text-orange-200">Apresentação</a>
         <a href="#Backgrounds" class="hover:text-orange-200">Backgrounds</a>
         <a href="#aulas" class="hover:text-orange-200">Aulas</a>
+        <a href="#Artigos" class="hover:text-orange-200">Artigos</a>
         <a href="#videos" class="hover:text-orange-200">Vídeos Recentes</a>
         <a href="#download" class="hover:text-orange-200">Download</a>
         <a href="#sobre" class="hover:text-orange-200">Sobre</a>
